--- a/Stream.ipynb
+++ b/Stream.ipynb
@@ -496,6 +496,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// 우리 과제에서 flat과 같은 일을 하는 스트림API 함수 concat을 이용해서 만들어 봅시다. \n",
+    "import java.util.*;\n",
+    "import java.util.stream.*;\n",
+    "\n",
+    "final List< List<Integer> > xss = Arrays.asList(\n",
+    "    Arrays.asList(1,2),\n",
+    "    Arrays.asList(3,4,5),\n",
+    "    Arrays.asList(6,7,8,9)\n",
+    ");\n",
+    "\n",
+    "// stream을 3개 만들어서 <- map으로 만들면 됨\n",
+    "// 그것을 하나로 줄인다 즉 reduce\n",
+    "return xss.stream() // 여기까지는 List< > 의 스트림\n",
+    "    .map( l -> l.stream() ) // 이제부터는 스트림의 스트림\n",
+    "    .reduce( (x,y) -> Stream.concat(x,y) ) // 스트림의 스트림이 하나의 옵셔널 스트림으로\n",
+    "    .get() // (empty가 아니라는 걸 아니까) 옵셔널 안에 있는 스트림을 빼옴\n",
+    "    .collect(Collectors.toList()); // 스트림이 다시 리스트로"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
